# changepacks

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.changepacks/: changepack_log_00POGXhB5Yry1SsrDoeZL.json  changepack_log_0g22mDCbJHbJGmyFsIs-f.json  changepack_log_15KmxD5-tn6QGIPZ-l2sz.json  changepack_log_1Nuvjw1vGhgHj8rnot5BQ.json  changepack_log_5RyiG5OP6HFP36iSsZVM6.json  changepack_log_6-j-Qm_JbP-wopYNQENa8.json  changepack_log_6Q6rcjT-IKXeR97aPQ_yB.json  changepack_log_8x97HMLyvsVT6i8rjUJYN.json  changepack_log_9TiL5o2kjFvgQnN1AGub_.json  changepack_log_ADUpy6JC7FHTCkjC5YBuP.json  changepack_log_ASEcb07z-zsO4jNUPaYKu.json  changepack_log_BfRepa9sMILx54DcKssuR.json  changepack_log_Dt2V4TbXqZUJh9UmxK_1f.json  changepack_log_FEpc0nl3DI1v64a9klMOQ.json  changepack_log_H4ElrtePTJqU4B04jBCeO.json  changepack_log_If4Z4odJjwsnfsv1Pq-0N.json  changepack_log_KTRB6eyGIvtFfumHqm7dx.json  changepack_log_KxoIftX8kBLKYAmvSaoJE.json  changepack_log_Kyr2zHZRZunSbXUvY7aXZ.json  changepack_log_MPY9fpF39LKdbj8Hysa4x.json  changepack_log_NWGkmx5XzU5HVE9WVmv2F.json  changepack_log_OPV8cbjAcUAq9vKtk905_.json  changepack_log_Op9Tr2Ho-sDiEAAdh7BfA.json  changepack_log_PFM35jb3-k-b04mPN4UuY.json  changepack_log_Q6n9ACCzbciduvfctUrQy.json  changepack_log_QB07pINx2Mu6D4tKTe2In.json  changepack_log_RCU7C93TvSbJQqR1Sj1PW.json  changepack_log_T5cq-Q5VRCoJp51ErV-ob.json  changepack_log_T_-Gd3Ng7jlrVFYIHyJmT.json  changepack_log_TbceW1KDvaT7GBhR5DvgI.json  changepack_log_TqfzNLsm6MDUNjf1YYO6n.json  changepack_log_UcJWsSSuGK-ME4mEo_G4U.json  changepack_log_Vk-R-Z7qVplxwqSSNphKW.json  changepack_log_Wa4ygg-zY3BJKWFUIIKvc.json  changepack_log_X91MeFfw6sGZqo1Uubh5O.json  changepack_log_XPdTKJLhfS3Zil4wEhIFT.json  changepack_log_XSXqY1HCmXBtuGpBa-dFZ.json  changepack_log_YmWIBg3yT1yA5NgmOgn6-.json  changepack_log_ZrHAusN6BhAu1uc3p6EkR.json  changepack_log_a9lYNfHL0k0c1QY3jQZtG.json  (+26 more)
.github/workflows/: CI.yml  Release.yml
.husky/: pre-commit
.omo/run-continuation/: ses_169a9a970ffean4cWheXc1kL3Z.json
bridge/: AGENTS.md
bridge/a/: pyproject.toml
bridge/a/.github/workflows/: CI.yml
bridge/node/: .gitattributes  .gitignore  Cargo.toml  index.js  main.js  package.json
bridge/node/.cargo/: config.toml
bridge/node/src/: lib.rs
bridge/python/: Cargo.toml  build.rs  pyproject.toml
bridge/python/.cargo/: config.toml
bridge/python/src/: endian_helper.c  main.rs
crates/: AGENTS.md
crates/changepacks/: Cargo.toml  build.rs
crates/changepacks/src/: main.rs
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: changepack.rs  check.rs  context.rs  finders.rs  init.rs  lib.rs  main.rs  prompter.rs  update.rs
crates/cli/src/commands/: changepack.rs  changepacks.rs  check.rs  config.rs  init.rs  mod.rs  publish.rs  update.rs
crates/cli/src/options/: filter_options.rs  format_options.rs  language_options.rs  mod.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: changepack_result.rs  config.rs  language.rs  lib.rs  package.rs  proejct_finder.rs  project.rs  project_finder.rs  publish.rs  publish_result.rs  update_log.rs  update_type.rs  workspace.rs
crates/csharp/: Cargo.toml
crates/csharp/src/: dry_run.rs  finder.rs  lib.rs  package.rs  workspace.rs  xml_utils.rs
crates/dart/: Cargo.toml
crates/dart/src/: finder.rs  lib.rs  package.rs  workspace.rs
crates/java/: Cargo.toml
crates/java/src/: finder.rs  lib.rs  package.rs  version_updater.rs  workspace.rs
crates/node/: Cargo.toml
crates/node/src/: finder.rs  lib.rs  package.rs  workspace.rs
crates/python/: Cargo.toml
crates/python/src/: finder.rs  lib.rs  package.rs  workspace.rs
crates/rust/: Cargo.toml
crates/rust/src/: finder.rs  lib.rs  package.rs  workspace.rs
crates/utils/: Cargo.toml
crates/utils/src/: clear_update_logs.rs  detect_indent.rs  display_project.rs  display_update.rs  filter_project_dirs.rs  find_current_git_repo.rs  gen_changepack_result_map.rs  gen_update_map.rs  get_changepack_dir.rs  get_changepacks_config.rs  get_changepacks_dir.rs  get_relative_path.rs  lib.rs  next_version.rs  sort_by_dep.rs  split_version.rs
examples/csharp/csharp/: Program.cs
examples/csharp/csharp-workspace/: MyWorkspace.sln
examples/dart/dart/: pubspec.yaml
examples/dart/dart-workspace/: pubspec.yaml
examples/dart/flutter_app/: pubspec.yaml
examples/node/bun-workspace/: package.json
examples/node/common/: package.json
examples/node/pnpm-workspace/: package.json  pnpm-workspace.yaml
examples/node/pnpm-workspace/apps/foo/: package.json
examples/python/uv/: pyproject.toml
examples/python/uv-workspace/: main.py  pyproject.toml
