[workspace]
resolver = "3"
members = ["crates/*", "bridge/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/changepacks/changepacks"
homepage = "https://github.com/changepacks/changepacks"

[workspace.dependencies]
changepacks-cli = { path = "crates/cli", version = "^0.2.19" }
changepacks-core = { path = "crates/core", version = "^0.2.16" }
changepacks-node = { path = "crates/node", version = "^0.2.16" }
changepacks-rust = { path = "crates/rust", version = "^0.2.15" }
changepacks-python = { path = "crates/python", version = "^0.2.15" }
changepacks-dart = { path = "crates/dart", version = "^0.2.15" }
changepacks-csharp = { path = "crates/csharp", version = "^0.2.15" }
changepacks-java = { path = "crates/java", version = "^0.2.15" }
changepacks-utils = { path = "crates/utils", version = "^0.2.16" }
