
[package]
authors = ["JeongMin Oh <owjs3901@gmail.com>"]
edition = "2024"
name = "node-cli"
version = "0.1.1"
license = "Apache-2.0"
description = "Node.js bridge for changepacks (N-API bindings)"
readme = "../../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.7", features = ["tokio_rt"] }
napi-derive = "3.4"
changepacks-cli.workspace = true
tokio = { version = "1.48" }

[build-dependencies]
napi-build = "2"
