[package]
name = "node-cli"
version = "0.1.1"
authors = ["JeongMin Oh <owjs3901@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node.js bridge for changepacks (N-API bindings)"
readme = "../../README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", features = ["tokio_rt"] }
napi-derive = "3.5"
changepacks-cli.workspace = true
tokio = { version = "1.49" }

[build-dependencies]
napi-build = "2"
