[package]
name = "python-cli"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Python bridge for changepacks (Python bindings)"
readme = "../../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
changepacks-cli.workspace = true
anyhow = "1.0"

[build-dependencies]
cc = "*"

[[bin]]
name = "changepacks"
path = "src/main.rs"

