[package]
name = "python-cli"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bridge for changepacks (Python bindings)"
readme = "../../README.md"
publish = false

[dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
changepacks-cli.workspace = true
anyhow = "1.0"

[build-dependencies]
cc = "*"

[[bin]]
name = "changepacks"
path = "src/main.rs"

