[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "changepacks"
requires-python = ">=3.9"
version = "0.1.22"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "../../README.md"

[tool.maturin]
bindings = "bin"
strip = true
