[package]
name = "changepacks"
version = "0.2.5"
edition = "2024"
license = "Apache-2.0"
description = "A unified version management and changelog tool for multi-language projects"
readme = "../../README.md"
default-run = "changepacks"

[dependencies]
changepacks-cli.workspace = true
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.0"

[[bin]]
name = "changepacks"
path = "src/main.rs"
