[package]
name = "changepacks"
version = "0.2.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A unified version management and changelog tool for multi-language projects"
readme = "../../README.md"
default-run = "changepacks"

[dependencies]
changepacks-cli.workspace = true
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.5"

[[bin]]
name = "changepacks"
path = "src/main.rs"
