[package]
name = "changepacks-cli"
version = "0.2.18"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI interface and commands for changepacks"
readme = "../../README.md"

[dependencies]
nanoid = "0.4"
clap = { version = "^4", features = ["derive"] }
changepacks-utils.workspace = true
changepacks-core.workspace = true
changepacks-node.workspace = true
changepacks-rust.workspace = true
changepacks-python.workspace = true
changepacks-dart.workspace = true
changepacks-csharp.workspace = true
changepacks-java.workspace = true
anyhow = "1.0"
thiserror = "2"
inquire = "0.9"
colored = "3"
serde_json = "1.0"
tokio = { version = "1.49", features = ["fs"] }
futures = "0.3"

[dev-dependencies]
async-trait = "0.1"
rstest = "0.26"
tempfile = "3"
serial_test = "3"
tokio = { version = "1.49", features = ["fs", "rt-multi-thread", "macros"] }
