[package]
name = "changepacks-core"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Core types and traits for changepacks workspace and package management"
readme = "../../README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["fs", "process"] }
async-trait = "0.1"
colored = "3.0"
