[package]
name = "changepacks-csharp"
version = "0.2.17"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C# (.NET) project support for changepacks (NuGet)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.50", features = ["fs", "process"] }
quick-xml = "0.39"
tempfile = "3.27"

[dev-dependencies]
tokio = { version = "1.50", features = ["test-util", "macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
