[package]
name = "changepacks-dart"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Dart project support for changepacks (pub)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1.48", features = ["fs"] }
yamlpatch = "0.5"
yamlpath = "0.28"
