[package]
name = "changepacks-dart"
version = "0.2.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dart project support for changepacks (pub)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1.49", features = ["fs"] }
yamlpatch = "0.9"
yamlpath = "0.32"

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1.49", features = ["test-util", "macros"] }
