[package]
name = "changepacks-java"
version = "0.2.14"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Java/Gradle project support for changepacks"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.49", features = ["fs", "process"] }
regex = "1"

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1.49", features = ["test-util", "macros"] }
