[package]
name = "changepacks-node"
version = "0.1.8"
edition = "2024"
license = "Apache-2.0"
description = "Node.js project support for changepacks (npm, pnpm, yarn)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
tokio = { version = "1.48", features = ["fs"] }

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.48", features = ["test-util", "macros"] }