[package]
name = "changepacks-node"
version = "0.2.17"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Node.js project support for changepacks (npm, pnpm, yarn)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
tokio = { version = "1.49", features = ["fs"] }

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1.49", features = ["test-util", "macros"] }
