[package]
name = "changepacks-python"
version = "0.2.9"
edition = "2024"
license = "Apache-2.0"
description = "Python project support for changepacks (pip, uv)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
anyhow = "1.0"
toml = "0.9"
tokio = { version = "1.48", features = ["fs"] }
async-trait = "0.1"
toml_edit = "0.24"

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1.48", features = ["test-util", "macros"] }
