[package]
name = "changepacks-python"
version = "0.2.18"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python project support for changepacks (pip, uv)"
readme = "../../README.md"

[dependencies]
changepacks-core.workspace = true
changepacks-utils.workspace = true
anyhow = "1.0"
toml = "1.0"
tokio = { version = "1.50", features = ["fs"] }
async-trait = "0.1"
toml_edit = "0.25"

[dev-dependencies]
tempfile = "3.27"
tokio = { version = "1.50", features = ["test-util", "macros"] }
