[package]
name = "changepacks-rust"
version = "0.2.19"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust project support for changepacks (Cargo)"
readme = "../../README.md"

[dependencies]
toml = "0.9"
changepacks-core.workspace = true
changepacks-utils.workspace = true
anyhow = "1.0"
tokio = { version = "1.49", features = ["fs"] }
async-trait = "0.1"
toml_edit = "0.24"

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1.49", features = ["test-util", "macros"] }
