[package]
name = "changepacks-utils"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Shared utilities for changepacks (path handling, version calculation, git operations)"
readme = "../../README.md"

[dependencies]
gix = { version = "0.73", default-features = false, features = ["index", "status", "parallel"] }
anyhow = "1.0"
changepacks-core.workspace = true
colored = "3"
tokio = { version = "1.48", features = ["fs"] }
futures = "0.3"
serde_json = "1.0"
ignore = "0.4"

[dev-dependencies]
rstest = "0.26"
tempfile = "3.23"
tokio = { version = "1.48", features = ["test-util", "macros"] }
