[package]
name = "changepacks-utils"
version = "0.2.19"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared utilities for changepacks (path handling, version calculation, git operations)"
readme = "../../README.md"

[dependencies]
gix = { version = "0.80", default-features = false, features = ["index", "status", "parallel"] }
anyhow = "1.0"
changepacks-core.workspace = true
colored = "3"
tokio = { version = "1.50", features = ["fs"] }
futures = "0.3"
serde_json = "1.0"
ignore = "0.4"
glob = "0.3"

[dev-dependencies]
rstest = "0.26"
tempfile = "3.27"
tokio = { version = "1.50", features = ["test-util", "macros"] }
changepacks-node = { path = "../node" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
